Change cursor attribute to _cursor in CDB and PDB classes and add methods to handle cursor operations correctly by switching to the correct container.

--- a/oracledba/oracledba.yaml
+++ b/oracledba/oracledba.yaml
@@ -1,5 +1,7 @@
 databases:
   cdb1:
+    # If using TNS, uncomment the following line
+    #connection_string: "cdb1_tnsname"
     user: sys
     password: oracle
     dsn: cdb_dsn
